Custom--app/main/default/objects/TIP_Tracking__c/TIP_Tracking__c.object-meta.xml
<CustomObject>
    <description>This is the primary object in the TIP deployment.  Tracks status and workflow for all TIP properties.</description>
    <label>TIP</label>
    <nameField>
        <displayFormat>TIP-{0000}</displayFormat>
        <label>TIP Tracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TIPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>