Custom--app/main/default/objects/TIP_Tracking__c/fields/Aband_Property_Notice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Aband_Property_Notice_End_Date__c</fullName>
    <formula>Abandoned_Prop_Notice_Date__c  +  Aband_Property_Statutory_Notice_Days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field will be auto-calculated based on the notice date and the days entered into the statutory notice box.</inlineHelpText>
    <label>Aband. Prop Notice End Date</label>
    <type>Date</type>
</CustomField>