Custom--app/main/default/objects/TIP_Tracking__c/fields/Aband_Property_Statutory_Notice_Days__c.field-meta.xml
<CustomField>
    <fullName>Aband_Property_Statutory_Notice_Days__c</fullName>
    <inlineHelpText>Enter the statutory notice period required for abandoned property for your region and/or for the particular circumstances related to this property.  This field will allow us to auto-calculate the date when the notice period is over.</inlineHelpText>
    <label>Aband. Prop Notice Required (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>