Custom--app/main/default/objects/TIP_Tracking__c/fields/Abandoned_Prop_Notice_Date__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Prop_Notice_Date__c</fullName>
    <label>Aband. Prop Notice Date</label>
    <type>Date</type>
</CustomField>