Custom--app/main/default/objects/TIP_Tracking__c/fields/Abandoned_Property__c.field-meta.xml
<CustomField>
    <fullName>Abandoned_Property__c</fullName>
    <label>Abandoned Property</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Removed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>