Custom--app/main/default/objects/TIP_Tracking__c/fields/Acquisition_Status__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Status__c</fullName>
    <formula>TEXT(Portfolio__r.Acquisition_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Status</label>
    <type>Text</type>
</CustomField>