Custom--app/main/default/objects/TIP_Tracking__c/fields/Active_Military_Status_Verified__c.field-meta.xml
<CustomField>
    <fullName>Active_Military_Status_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Military Status Verified</label>
    <type>Checkbox</type>
</CustomField>