Custom--app/main/default/objects/TIP_Tracking__c/fields/App_Status__c.field-meta.xml
<CustomField>
    <fullName>App_Status__c</fullName>
    <label>App Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>