Custom--app/main/default/objects/TIP_Tracking__c/fields/Application_Received__c.field-meta.xml
<CustomField>
    <fullName>Application_Received__c</fullName>
    <label>Application Received</label>
    <type>Date</type>
</CustomField>