Custom--app/main/default/objects/TIP_Tracking__c/fields/Backyard__c.field-meta.xml
<CustomField>
    <fullName>Backyard__c</fullName>
    <label>Backyard</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Nothing Visible</fullName>
            </value>
            <value>
                <fullName>Furniture Visibile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>