Custom--app/main/default/objects/TIP_Tracking__c/fields/Bid_Type__c.field-meta.xml
<CustomField>
    <fullName>Bid_Type__c</fullName>
    <formula>TEXT(Portfolio__r.Bid_Type__c)</formula>
    <label>Bid Type</label>
    <type>Text</type>
</CustomField>