Custom--app/main/default/objects/TIP_Tracking__c/fields/Budgeted_CFK__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_CFK__c</fullName>
    <label>CFK Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>