Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Actual_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>CFK_Actual_Amount_Paid__c</fullName>
    <label>CFK Check Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>