Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Agreed_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>CFK_Agreed_Move_Out_Date__c</fullName>
    <label>CFK Agreed Move Out Date</label>
    <type>Date</type>
</CustomField>