Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Approved_Offer_Amount__c.field-meta.xml
<CustomField>
    <fullName>CFK_Approved_Offer_Amount__c</fullName>
    <label>CFK Approved Offer Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>