Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Cashiers_Check_Rqst_Date__c.field-meta.xml
<CustomField>
    <fullName>CFK_Cashiers_Check_Rqst_Date__c</fullName>
    <label>CFK Cashiers Check Rqst Date</label>
    <type>Date</type>
</CustomField>