Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Date_File_Handed_to_Driver__c.field-meta.xml
<CustomField>
    <fullName>CFK_Date_File_Handed_to_Driver__c</fullName>
    <label>CFK Date File Handed to Driver</label>
    <type>Date</type>
</CustomField>