Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Deal_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>CFK_Deal_Acceptance_Date__c</fullName>
    <label>CFK Deal Acceptance Date</label>
    <type>Date</type>
</CustomField>