Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Details__c.field-meta.xml
<CustomField>
    <fullName>CFK_Details__c</fullName>
    <label>CFK Details</label>
    <length>155</length>
    <type>Text</type>
</CustomField>