Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Driver_ReceivingCHeck__c.field-meta.xml
<CustomField>
    <fullName>CFK_Driver_ReceivingCHeck__c</fullName>
    <label>CFK Driver Receiving Check</label>
    <length>155</length>
    <type>Text</type>
</CustomField>