Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Indication_of_Interest_Date__c.field-meta.xml
<CustomField>
    <fullName>CFK_Indication_of_Interest_Date__c</fullName>
    <label>CFK Indication of Interest Date</label>
    <type>Date</type>
</CustomField>