Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Notes__c.field-meta.xml
<CustomField>
    <fullName>CFK_Notes__c</fullName>
    <label>CFK Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>