Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Offered_Amount__c.field-meta.xml
<CustomField>
    <fullName>CFK_Offered_Amount__c</fullName>
    <label>CFK Offered Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>