Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>CFK_Paid_Date__c</fullName>
    <label>CFK Paid Date</label>
    <type>Date</type>
</CustomField>