Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Payee_Occupant_W9__c.field-meta.xml
<CustomField>
    <fullName>CFK_Payee_Occupant_W9__c</fullName>
    <label>CFK Payee/Occupant (W9)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>