Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Status__c.field-meta.xml
<CustomField>
    <fullName>CFK_Status__c</fullName>
    <label>CFK Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Need Values</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>