Custom--app/main/default/objects/TIP_Tracking__c/fields/CFK_Unsuccessful_Negotiations__c.field-meta.xml
<CustomField>
    <fullName>CFK_Unsuccessful_Negotiations__c</fullName>
    <label>CFK Unsuccessful Negotiations</label>
    <type>Date</type>
</CustomField>