Custom--app/main/default/objects/TIP_Tracking__c/fields/Contact_2_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contact_2_Comments__c</fullName>
    <label>Contact 2 Comments</label>
    <type>TextArea</type>
</CustomField>