Custom--app/main/default/objects/TIP_Tracking__c/fields/Contact_3_Comments__c.field-meta.xml
<CustomField>
    <fullName>Contact_3_Comments__c</fullName>
    <label>Contact 3 Comments</label>
    <type>TextArea</type>
</CustomField>