Custom--app/main/default/objects/TIP_Tracking__c/fields/Contact_Attempt_3_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Attempt_3_Date__c</fullName>
    <label>Contact Attempt 3 Date</label>
    <type>Date</type>
</CustomField>