Custom--app/main/default/objects/TIP_Tracking__c/fields/Contact_Attempt_3_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Attempt_3_Time__c</fullName>
    <label>Contact Attempt 3 Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>