Custom--app/main/default/objects/TIP_Tracking__c/fields/Current_Lease__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease__c</fullName>
    <label>Current Lease</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>