Custom--app/main/default/objects/TIP_Tracking__c/fields/Current_Lease_Amt__c.field-meta.xml
<CustomField>
    <fullName>Current_Lease_Amt__c</fullName>
    <label>Current Lease Amt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>