Custom--app/main/default/objects/TIP_Tracking__c/fields/Data_Load_App_Received__c.field-meta.xml
<CustomField>
    <fullName>Data_Load_App_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This is a checkbox that we were not planning on having on the page but we have this data in the tracker so we are going to capture the data point.</inlineHelpText>
    <label>Data Load - App Received</label>
    <type>Checkbox</type>
</CustomField>