Custom--app/main/default/objects/TIP_Tracking__c/fields/dataload_driver__c.field-meta.xml
<CustomField>
    <fullName>dataload_driver__c</fullName>
    <inlineHelpText>This is a temporary field that will be used to map the text field from the tracker.  Going forward, all drivers should be associated via the look-up field below.</inlineHelpText>
    <label>Driver (text field from tracker)</label>
    <length>155</length>
    <type>Text</type>
</CustomField>