Custom--app/main/default/objects/TIP_Tracking__c/fields/Days_Initial_Knock_to_CFK_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Days_Initial_Knock_to_CFK_Agreement__c</fullName>
    <formula>CFK_Deal_Acceptance_Date__c - Initial_Contact_Date__c</formula>
    <label># Days Initial Knock to CFK Agreement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>