Custom--app/main/default/objects/TIP_Tracking__c/fields/Deed_Status__c.field-meta.xml
<CustomField>
    <fullName>Deed_Status__c</fullName>
    <formula>TEXT( Portfolio__r.Current_Deed_Status__c )</formula>
    <label>Deed Status</label>
    <type>Text</type>
</CustomField>