Custom--app/main/default/objects/TIP_Tracking__c/fields/DK_Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>DK_Assigned_Date__c</fullName>
    <label>DK Assigned Date</label>
    <type>Date</type>
</CustomField>