Custom--app/main/default/objects/TIP_Tracking__c/fields/DK_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>DK_Complete_Date__c</fullName>
    <inlineHelpText>Drivers should use this field to indicate when they have completed their work related to particular property, including entering all relevant information.</inlineHelpText>
    <label>DK Complete Date</label>
    <type>Date</type>
</CustomField>