Custom--app/main/default/objects/TIP_Tracking__c/fields/DK_Driver_Assigned__c.field-meta.xml
<CustomField>
    <fullName>DK_Driver_Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DK Driver Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TIPs</relationshipName>
    <type>Lookup</type>
</CustomField>