Custom--app/main/default/objects/TIP_Tracking__c/fields/Driver_Notes__c.field-meta.xml
<CustomField>
    <fullName>Driver_Notes__c</fullName>
    <label>Driver Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>