Custom--app/main/default/objects/TIP_Tracking__c/fields/Electrical__c.field-meta.xml
<CustomField>
    <fullName>Electrical__c</fullName>
    <label>Electric</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>