Custom--app/main/default/objects/TIP_Tracking__c/fields/Evict_Statutory_Notice_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Evict_Statutory_Notice_End_Date__c</fullName>
    <formula>Initial_Notice_Date__c + Evict_Statutory_Notice_Required__c</formula>
    <inlineHelpText>This field will be auto-calculated based on the notice date and the days entered into the statutory notice box.</inlineHelpText>
    <label>Evict Notice End Date</label>
    <type>Date</type>
</CustomField>