Custom--app/main/default/objects/TIP_Tracking__c/fields/Evict_Statutory_Notice_Required__c.field-meta.xml
<CustomField>
    <fullName>Evict_Statutory_Notice_Required__c</fullName>
    <description>Enter the statutory notice period required for evictions for your region and/or for the particular circumstances related to this property. This field will allow us to auto-calculate the date when the notice period is over.</description>
    <inlineHelpText>Enter the statutory notice period required for evictions for your region and/or for the particular circumstances related to this property. This field will allow us to auto-calculate the date when the notice period is over.</inlineHelpText>
    <label>Evict Notice Required (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>