Custom--app/main/default/objects/TIP_Tracking__c/fields/Initial_Contact_Comments__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Comments__c</fullName>
    <label>Initial Contact Comments</label>
    <type>TextArea</type>
</CustomField>