Custom--app/main/default/objects/TIP_Tracking__c/fields/Initial_Contact_Result__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Result__c</fullName>
    <label>Initial Contact Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed Vacant</fullName>
            </value>
            <value>
                <fullName>Contacted Occupant</fullName>
            </value>
            <value>
                <fullName>Posted Notice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>