Custom--app/main/default/objects/TIP_Tracking__c/fields/Initial_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Initial_Contact_Time__c</fullName>
    <label>Initial Contact Time</label>
    <length>18</length>
    <type>Text</type>
</CustomField>