Custom--app/main/default/objects/TIP_Tracking__c/fields/Lease_Paperwork__c.field-meta.xml
<CustomField>
    <fullName>Lease_Paperwork__c</fullName>
    <label>Lease Paperwork</label>
    <type>Date</type>
</CustomField>