Custom--app/main/default/objects/TIP_Tracking__c/fields/Lease_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Lease_Strategy__c</fullName>
    <label>Lease Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Rent to New Tenant</fullName>
            </value>
            <value>
                <fullName>Rent to Current Tenant</fullName>
            </value>
            <value>
                <fullName>Purchased Rented</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>