Custom--app/main/default/objects/TIP_Tracking__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assumed</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>