Custom--app/main/default/objects/TIP_Tracking__c/fields/LegacyID__c.field-meta.xml
<CustomField>
    <fullName>LegacyID__c</fullName>
    <label>LegacyID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>