Custom--app/main/default/objects/TIP_Tracking__c/fields/Monthly_Rent_UW__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Rent_UW__c</fullName>
    <formula>Portfolio__r.Exp_Gross_Monthly_Rent_UW__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Rent @ UW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>