Custom--app/main/default/objects/TIP_Tracking__c/fields/Move_Out_Actual__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Actual__c</fullName>
    <inlineHelpText>This should be used for occupants that move out on their own accord without CFK or eviction process.</inlineHelpText>
    <label>Move-Out Actual</label>
    <type>Date</type>
</CustomField>