Custom--app/main/default/objects/TIP_Tracking__c/fields/Move_Out_Verbal_Date__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Verbal_Date__c</fullName>
    <inlineHelpText>If the occupant indicates they will be vacating the property, what is the expected move out date?</inlineHelpText>
    <label>Move-Out Verbal Date</label>
    <type>Date</type>
</CustomField>