Custom--app/main/default/objects/TIP_Tracking__c/fields/Neighbors__c.field-meta.xml
<CustomField>
    <fullName>Neighbors__c</fullName>
    <label>Neighbors</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Contact</fullName>
            </value>
            <value>
                <fullName>Said Vacant</fullName>
            </value>
            <value>
                <fullName>Said Occupied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>