Custom--app/main/default/objects/TIP_Tracking__c/fields/New_Lease_Amount__c.field-meta.xml
<CustomField>
    <fullName>New_Lease_Amount__c</fullName>
    <label>Lease Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>