Custom--app/main/default/objects/TIP_Tracking__c/fields/Occupant_Intentions__c.field-meta.xml
<CustomField>
    <fullName>Occupant_Intentions__c</fullName>
    <inlineHelpText>This should reflect the driver's assessment based on contact with occupant.</inlineHelpText>
    <label>Occupant Intentions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash for Keys</fullName>
            </value>
            <value>
                <fullName>Move Out</fullName>
            </value>
            <value>
                <fullName>Stay</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
            <value>
                <fullName>Evict</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>