Custom--app/main/default/objects/TIP_Tracking__c/fields/of_Days_in_TIP__c.field-meta.xml
<CustomField>
    <fullName>of_Days_in_TIP__c</fullName>
    <formula>IF( ISPICKVAL( TIP_Status__c , "TIP - New (Needs Driver)") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "TIP - Driver Assigned") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "TIP - DK Initial Contact") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "TIP - Voluntary Move-Out") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "TIP - CFK Negotiations") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "TIP - Lease Negotiations") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "TIP - Eviction") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "Closed - Leased (Assumed)") ,   TIP_Closed_Date__c -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "Closed - Leased (New)") ,  TIP_Closed_Date__c -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "Closed - Vacant") , TIP_Closed_Date__c -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "Closed  - Purchase Rented") ,  TIP_Closed_Date__c-  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "Closed - Acq Cancelled") ,  TIP_Closed_Date__c -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "Closed - For Sale/Disposition") ,  TIP_Closed_Date__c -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "HOLD - Abd. Property Notice") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "HOLD - BK") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "HOLD - Deed") ,  TODAY() -  Acquisition_Date__c , 
IF( ISPICKVAL( TIP_Status__c , "HOLD - Limbo") ,  TODAY() -  Acquisition_Date__c , 
null)))))))))))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days in TIP</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>