Custom--app/main/default/objects/TIP_Tracking__c/fields/PM_Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>PM_Portfolio_Manager__c</fullName>
    <formula>Portfolio__r.Owner:User.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PM (Portfolio Manager)</label>
    <type>Text</type>
</CustomField>