Custom--app/main/default/objects/TIP_Tracking__c/fields/Portfolio__c.field-meta.xml
<CustomField>
    <fullName>Portfolio__c</fullName>
    <label>Portfolio</label>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>TIPs</relationshipLabel>
    <relationshipName>TIPs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>