Custom--app/main/default/objects/TIP_Tracking__c/fields/Portfolio_Manager__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager__c</fullName>
    <formula>Portfolio__r.Owner:User.Full_Name__c</formula>
    <inlineHelpText>This field auto-populates from the Owner field on the related Portfolio record.  If this field is blank, it is because the Owner is the Queue for the region.  Once the record is assigned to a person, this field will reflect that person's name.</inlineHelpText>
    <label>Portfolio Manager</label>
    <type>Text</type>
</CustomField>