Custom--app/main/default/objects/TIP_Tracking__c/fields/Portfolio_Manager_Old__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Manager_Old__c</fullName>
    <inlineHelpText>Please include first and last name.  When we deploy sf.com to the rest of the company, this field will change into a look-up and will support auto-alerts.</inlineHelpText>
    <label>Portfolio Manager Old</label>
    <length>155</length>
    <type>Text</type>
</CustomField>