Custom--app/main/default/objects/TIP_Tracking__c/fields/Property_Code_Text__c.field-meta.xml
<CustomField>
    <fullName>Property_Code_Text__c</fullName>
    <description>This field will be populated with the Property Code (Asset Number) via a workflow to ensure that this code can be accessed via search results.</description>
    <externalId>true</externalId>
    <label>Property Code (Text)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>