Custom--app/main/default/objects/TIP_Tracking__c/fields/Property_Condition__c.field-meta.xml
<CustomField>
    <fullName>Property_Condition__c</fullName>
    <label>Property Condition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Poor</fullName>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>