Custom--app/main/default/objects/TIP_Tracking__c/fields/Property_Cross_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Cross_Street__c</fullName>
    <formula>Portfolio__r.Property_Cross_Streets__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Cross Streets</label>
    <type>Text</type>
</CustomField>