Custom--app/main/default/objects/TIP_Tracking__c/fields/Property_Street__c.field-meta.xml
<CustomField>
    <fullName>Property_Street__c</fullName>
    <formula>Portfolio__r.Property_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Street</label>
    <type>Text</type>
</CustomField>