Custom--app/main/default/objects/TIP_Tracking__c/fields/Property_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Zip_Code__c</fullName>
    <formula>Portfolio__r.Property_Zip_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Zip Code</label>
    <type>Text</type>
</CustomField>