Custom--app/main/default/objects/TIP_Tracking__c/fields/Purchase_Rented_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Rented_Confirmation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Rented Details</label>
    <referenceTo>Purchase_Rented__c</referenceTo>
    <relationshipLabel>TIPs</relationshipLabel>
    <relationshipName>TIPs</relationshipName>
    <type>Lookup</type>
</CustomField>