Custom--app/main/default/objects/TIP_Tracking__c/fields/Recommend_Referral_to_Eviction__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Referral_to_Eviction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recommend Referral to Eviction</label>
    <type>Checkbox</type>
</CustomField>