Custom--app/main/default/objects/TIP_Tracking__c/fields/Recommend_Referral_to_Eviction_Date__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Referral_to_Eviction_Date__c</fullName>
    <label>Recommend Referral to Eviction Date</label>
    <type>Date</type>
</CustomField>