Custom--app/main/default/objects/TIP_Tracking__c/fields/Rehab__c.field-meta.xml
<CustomField>
    <fullName>Rehab__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Once you send click the "Ready to Rekey" button,  a rehab record will be created and will be linked here.  Conversely, if this property was originally sent to rehab and they sent it back to TIP, the original rehab record will be linked here.</inlineHelpText>
    <label>Rehab Record</label>
    <referenceTo>Rehab__c</referenceTo>
    <relationshipLabel>TIPs</relationshipLabel>
    <relationshipName>Rehub_Relationship</relationshipName>
    <type>Lookup</type>
</CustomField>