Custom--app/main/default/objects/TIP_Tracking__c/fields/Residence__c.field-meta.xml
<CustomField>
    <fullName>Residence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residence</label>
    <referenceTo>Residence__c</referenceTo>
    <relationshipLabel>TIPs</relationshipLabel>
    <relationshipName>TIPs</relationshipName>
    <type>Lookup</type>
</CustomField>