Custom--app/main/default/objects/TIP_Tracking__c/fields/Section_8_Lease__c.field-meta.xml
<CustomField>
    <fullName>Section_8_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Section 8 Lease</label>
    <type>Checkbox</type>
</CustomField>