Custom--app/main/default/objects/TIP_Tracking__c/fields/Sent_to_Rehab__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_Rehab__c</fullName>
    <label>Sent to Rehab Date</label>
    <type>Date</type>
</CustomField>