Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Aging_Comments__c.field-meta.xml
<CustomField>
    <fullName>TIP_Aging_Comments__c</fullName>
    <inlineHelpText>Please update weekly with the latest status for aged TIPs.  Include the date and your name behind each new entry.</inlineHelpText>
    <label>TIP Aging Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>