Custom--app/main/default/objects/TIP_Tracking__c/fields/TIP_Aging_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>TIP_Aging_Start_Date__c</fullName>
    <formula>IF(ISPICKVAL( TIP_Type__c, "Post-Acquisition"), Acquisition_Date__c, DATEVALUE(CreatedDate))</formula>
    <label>TIP Aging Start Date</label>
    <type>Date</type>
</CustomField>